<resources>
    <string name="app_name">iContact</string>
    <string name="title_info">Student Info</string>
    <string name="title_homework">Homework</string>
    <string name="title_exam">Exam</string>
    <string name="title_contact">Teacher List</string>
    <string name="text_studentId">student ID:</string>
    <string name="text_class">Class:</string>
    <string name="text_gender">Gender:</string>
    <string name="text_dayOfBirth">Day of Birth:</string>
    <string name="text_phoneNumber">Phone Number:</string>
    <string name="text_logOut">Log Out</string>
    <string name="text_settings">Settings</string>
    <string name="text_semester_grade">Semester Grade</string>
    <string name="text_contactTeacher">Contact Teacher</string>
    <string name="text_contactMainTeacher">Contact Teacher</string>
    <string name="text_email">E-mail:</string>
    <string name="text_name">Name:</string>
    <string name="text_subject1">Subject 1 :</string>
    <string name="text_subject2">Subject 2 :</string>
    <string name="title_contactDetail">Contact Teacher</string>
    <string name="text_editInfo">Edit Info</string>
    <string name="title_infoEdit">Editing Info</string>
    <string name="title_navigation_info">Info</string>
</resources>
